<resources>
    <string name="app_name">Lipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_ac">Create account</string>
    <string name="welcome_text">Welcome back</string>
    <string name="email_text">Email</string>
    <string name="pass_text">Password</string>
    <string name="about_you">Tell about yourself</string>
    <string name="tap_to_upload">Tap to upload your photo</string>
    <string name="map">Map</string>
    <string name="rating">Rating</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="friends_amount">Friends</string>
    <string name="change_data">Change your info</string>
    <string name="cur_events">Current events</string>
    <string name="events_amount">Events</string>
    <string name="your_events">Your events</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_name_lastname">Name and surname</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="save_changes">Save changes</string>
    <string name="updating_info">Updating info...</string>
    <string name="create_event">Create event</string>
    <string name="eco">Ecology</string>
    <string name="ent">Entertainment</string>
    <string name="help">Help</string>
    <string name="event_details">Event\'s details</string>
    <string name="event_name">Enter name of event</string>
    <string name="age">Age</string>
    <string name="max_people">Max people</string>
    <string name="detailed_desc">Detailed event description</string>
    <string name="meeting_date">Tap to set meeting time</string>
    <string name="power_of_pollution">Power of pollution</string>
    <string name="min_people">Min. people</string>
    <string name="people_were_on_event">Choose people who were at the event</string>
    <string name="message_tint">Message</string>
    <string name="finish_event">Finish</string>
    <string name="price">Enter price</string>
    <string name="people_need">How many people you need</string>
    <string name="creator">Creator</string>
    <string name="date_of_meting">Date of meeting</string>
    <string name="free_places">Free places</string>
    <string name="about_event">About event</string>
    <string name="want_to_event">I want to go</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="search_by_login">Search by login</string>
    <string name="current">Current</string>
    <string name="your">Your</string>
    <string name="users_events">User\'s events</string>
    <string name="write_to_friend">Chat to friend</string>
    <string name="accept_friendsheep">Accept friendship</string>
    <string name="request_sent">Request was sent</string>
    <string name="it_is_you">You</string>
    <string name="delete_friend">Delete from friends</string>
    <string name="place">Place</string>
    <string name="username">Username</string>
    <string name="points">Points</string>
    <string name="title_start">Create events and look for new friends!</string>
    <string name="let_start">Let\'s start</string>
    <string name="name_surname">Your name and lastname</string>
    <string name="enter_email">Enter email</string>
    <string name="except_policy">I agree with privacy policy</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Already have an account? Sign in</string>
    <string name="basketball">Basketball</string>
    <string name="volleyball">Volleyball</string>
    <string name="football">Football</string>
    <string name="rugby">Rugby</string>
    <string name="workout">Workout</string>
    <string name="tennis">Tennis</string>
    <string name="badminton">Badminton</string>
    <string name="table_tennis">Table tennis</string>
    <string name="gymnastics">Gymnastics</string>
    <string name="fencing">Fencing</string>
    <string name="jogging">Jogging</string>
    <string name="curling">Curling</string>
    <string name="hockey">Hockey</string>
    <string name="ice_skating">Ice skating</string>
    <string name="skiing">Skiing</string>
    <string name="downhill_skiing">Downhill skiing</string>
    <string name="snowboarding">Snowboarding</string>
    <string name="table_games">Table games</string>
    <string name="mobile_games">Mobile games</string>
    <string name="chess">Chess</string>
    <string name="programming">Programming</string>
    <string name="choose_ent_type">Choose entertainment type</string>
    <string name="about_task">About task</string>
    <string name="any_age">Any age</string>
    <string name="no_image">You didn\'t upload any photo</string>
    <string name="min_one_photo">You should upload at least one photo</string>
    <string name="already_friend">Friend</string>
    <string name="add">Add</string>
    <string name="groups">Groups</string>
    <string name="no_events">No events</string>
    <string name="in">" on "</string>
    <string name="finish">Finish</string>
    <string name="list">List</string>
    <string name="leave">Leave</string>
    <string name="success_reg">Successful registration</string>
    <string name="congrats_success_reg">Congrats, your registration on this event is successful</string>
    <string name="nice">Nice!</string>
    <string name="error_reg">Error in registration</string>
    <string name="smth_went_wrong_reg_event">Something went wrong, try to register again</string>
    <string name="okey">Okey</string>
    <string name="message">Message</string>
    <string name="more_18">Older than 18 y.o.</string>
    <string name="before_18">Younger than 18 y.o.</string>
    <string name="choose_sport">Choose sport!</string>
    <string name="enter_desc">Enter description!</string>
    <string name="enter_title">Enter title!</string>
    <string name="enter_people_amount">Enter people amount!</string>
    <string name="age_was_not_chosen">You have not chosen an age</string>
    <string name="must_age">You must choose an allowed age for your event</string>
    <string name="date_start_event">You have not selected the start date for the event</string>
    <string name="date_of_meeting">You must select the date of starting event, be exact, select a date of meeting with all members</string>
    <string name="no_sport_error">You have not selected a type of sport for event</string>
    <string name="must_type_sport">You must select a type of sport</string>
    <string name="choose_time">Select the time</string>
    <string name="year">year</string>
    <string name="choose_the_date">Select the date</string>
    <string name="like_landfield">Like a landfill</string>
    <string name="a_lot">A lot</string>
    <string name="quite_a_lot">Quite a lot</string>
    <string name="some">Some bottles and e.t.c</string>
    <string name="send_report">Send report</string>
    <string name="enter_reason">Enter the reason</string>
    <string name="select_reason">Select the reason</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reason">Reason</string>
    <string name="full_reason">Full reason</string>
    <string name="propaganda_violence">Propaganda of violence</string>
    <string name="event_fake">Event is fake</string>
    <string name="fraud">Scam</string>
    <string name="selling_drugs">Selling psychotropic drugs</string>
    <string name="other">Other</string>
    <string name="Confirmed">Confirmed</string>
    <string name="delete_event">Delete event</string>
    <string name="reports">Reports</string>
    <string name="on_map">On map</string>
    <string name="all_reports">All reports</string>
    <string name="your_reports">Your work</string>
    <string name="confirmed">Confirmed</string>
    <string name="preparation">Learn how to use this app</string>
    <string name="finger">Hold your finger on screen for 1 sec. to create event</string>
    <string name="can">Perfect, now you can use this app properly, good luck!</string>
    <string name="theme_help">You can set up a profile theme by clicking on blue background and choosing photo that you want to see</string>
    <string name="not_auth">You are not authorized</string>
    <string name="suc_ev">Event was successfully created!</string>
    <string name="creating">Creating event...</string>
    <string name="query_friend">Query to friends</string>
    <string name="friends_view">To see all your friends tap on button like on image</string>
    <string name="suc_delete">Event was successfully deleted</string>
    <string name="deleted_ac">Deleted account</string>
    <string name="next">Next</string>
    <string name="enter">Sign in</string>
    <string name="or">or</string>
    <string name="no_ac">Dont have an account? Sign up</string>
    <string name="user_s_events">User\'s events</string>
    <string name="begin_friend_dialog">To see information about a friend on the map, click on his avatar on the map, the information will appear at the top of the screen</string>
    <string name="league">League</string>
    <string name="leagues">Leagues</string>
    <string name="wood">Wood</string>
    <string name="_0_200">0 ● 200 points</string>
    <string name="iron">Iron</string>
    <string name="_200_500">200 ● 500 points</string>
    <string name="gold">Gold</string>
    <string name="_500_999">500 ● 999 points</string>
    <string name="_1000">1000+ points</string>
    <string name="diamond">Diamond</string>
    <string name="ok">Ok</string>
    <string name="you">It is you</string>
    <string name="your_friend">Your friend</string>
    <string name="not_friend">Not a friend</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard</string>
    <string name="copy">To copy event\'s address just press it</string>
    <string name="list_partic">List of participators</string>
    <string name="_4">Password must contain at least 4 symbols</string>
    <string name="enter_pass">Enter password</string>
    <string name="policy">Agree with app\'s policy</string>
    <string name="Completing">Completing...</string>
    <string name="auth_go">Authorising...</string>
    <string name="google">Google</string>
    <string name="create_acc">Create account</string>
</resources>
