<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/all_fields"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".create_events.CreateEventFragment">

        <LinearLayout
            android:id="@+id/constraintLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/lineVectorOne"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_3sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="#959494" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/create_event"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/nunito_sans"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/buttonEco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eco"
                    />
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/buttonEnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ent"
                    />
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/buttonHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/create_event_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_6sdp"/>
        </LinearLayout>
</LinearLayout>