<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottomsheet_event">

    <data>
        <variable
            name="viewModel"
            type="com.example.lipe.viewModels.ProfileVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/all_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="@dimen/_203sdp"
        android:paddingBottom="@dimen/_12sdp">

        <ProgressBar
            android:id="@+id/saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/all_2"
            app:layout_constraintEnd_toEndOf="@id/all_2"
            app:layout_constraintStart_toStartOf="@id/all_2"
            app:layout_constraintTop_toTopOf="@+id/all_2" />

        <TextView
            android:id="@+id/statusSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updating_info"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/nunitosansbold"
            app:layout_constraintStart_toStartOf="@id/all_2"
            app:layout_constraintTop_toBottomOf="@+id/saving" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/allEditProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:src="@drawable/horizontalrule"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosansbold"
                android:text="@string/edit_profile"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="@dimen/_174sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:counterMaxLength="30"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLogininput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_login"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@{viewModel.nickname}"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="@dimen/_171sdp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameAndSurnameinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name_lastname"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@{viewModel.name}"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/avatar"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descTextLay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_156sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:counterMaxLength="300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:gravity="top"
                    android:hint="@string/about_you"
                    android:inputType="textMultiLine"
                    android:singleLine="true"
                    android:text="@{viewModel.desc}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:padding="@dimen/_2sdp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
                app:strokeColor="?attr/colorOnSurfaceInverse"
                app:strokeWidth="@dimen/_2sdp" />

            <Button
                android:id="@+id/saveAllChanges"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:backgroundTint="@color/green"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@color/quantum_white_100"
                android:textFontWeight="600"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/descTextLay"
                tools:ignore="TextSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>