<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/eventPhoto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_190sdp"
                android:scaleType="centerCrop" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_10sdp"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ImageStyle_Circle" />

                <LinearLayout
                    android:id="@+id/linearLayout9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_3sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunitosansbold"
                        android:gravity="center"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/creator"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            <com.google.android.material.divider.MaterialDivider-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingStart="@dimen/_10sdp"-->
<!--                android:paddingVertical="@dimen/_6sdp"-->
<!--                android:orientation="vertical">-->
<!--                <TextView-->
<!--                    android:id="@+id/title"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textSize="@dimen/_13sdp"-->
<!--                    android:text="Футбол"-->
<!--                    android:textAppearance="?attr/textAppearanceTitleMedium" />-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="@dimen/_13sdp"-->
<!--                    android:textSize="@dimen/_13sdp"-->
<!--                    android:fontFamily="@font/nunitosansregular"-->
<!--                    android:text="Давайте соберемся и сыграем в футбол будет очень прикольно"-->
<!--                    android:layout_marginTop="@dimen/_5sdp"-->
<!--                    android:textAppearance="?attr/textAppearanceBodyMedium"-->
<!--                    android:textColor="?android:attr/textColorSecondary" />-->

<!--            </LinearLayout>-->

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:text="Взять на рассмотрение"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_event_btn"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:visibility="invisible"
                    android:text="@string/delete_event"
                    android:textColor="@color/quantum_googred"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reports_btn"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reports"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@+id/on_map_btn"
                    app:layout_constraintStart_toEndOf="@+id/delete_event_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/on_map_btn"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_gravity="end"
                    android:text="@string/on_map"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>